<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="176dp"
        android:layout_height="158dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="176dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/neue_frutiger_world_bold"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon" />

    <Button
        android:id="@+id/go_User"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/neue_frutiger_world_black"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_message" />

    <Button
        android:id="@+id/go_admin"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/neue_frutiger_world_black"
        android:text="@string/admin"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/go_User"
        app:layout_constraintTop_toBottomOf="@+id/login_message" />
</androidx.constraintlayout.widget.ConstraintLayout>