<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:background="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/neue_frutiger_world_black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/header_name"
        app:layout_constraintTop_toTopOf="@id/header"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/add_dog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/neue_frutiger_world_black"
        android:text="@string/add_dog"
        android:textColor="@color/black"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_dog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/neue_frutiger_world_bold"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_header" />

    <TextView
        android:id="@+id/add_dog_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/neue_frutiger_world_bold"
        android:text="@string/dog_type"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_fill_name" />

    <TextView
        android:id="@+id/add_dog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/neue_frutiger_world_bold"
        android:text="@string/information"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_fill_type" />

    <EditText
        android:id="@+id/add_fill_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_form"
        android:ems="10"
        android:fontFamily="@font/neue_frutiger_world_regular"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_name" />

    <EditText
        android:id="@+id/add_fill_type"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_form"
        android:ems="10"
        android:fontFamily="@font/neue_frutiger_world_regular"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_type" />

    <EditText
        android:id="@+id/add_fill_info"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_form"
        android:ems="10"
        android:fontFamily="@font/neue_frutiger_world_regular"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dog_info" />

    <Button
        android:id="@+id/add_dog_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/neue_frutiger_world_black"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_fill_info" />
</androidx.constraintlayout.widget.ConstraintLayout>